@@ -7,11 +7,10 @@
                 var video = document.getElementById('vid');
                 if (video.style.display == "none") {
                     video.style.display = "inline-block";
-                    if (window.layoutTestController)
-                        layoutTestController.notifyDone();
+                    video.addEventListener("seeked", done);
+                    video.currentTime = 0; // so the snapshot always has the same frame
                 } else
                     video.style.display = "none";
-                document.body.offsetLeft;
             }
             function test()
             {
@@ -19,14 +18,18 @@
                     layoutTestController.waitUntilDone();
                 setSrcById('vid', findMediaFile('video', 'content/test'));
                 var video = document.getElementById('vid');
+                video.addEventListener("canplaythrough", test2);
                 video.load();
-                video.play();
-                video.addEventListener("playing", test2);
             }
             function test2()
             {
                 toggleDisplay();
                 toggleDisplay();
+            }
+            function done()
+            {
+                if (window.layoutTestController)
+                    layoutTestController.notifyDone();
             }
         </script>
     </head>
